--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         alt="Profile Photo" />
                 </div>
                 <div class="project-info">
-                    <b>My mission is to inspire interest and enthusiasm in British.</b>
+                    <b>My mission is to inspire interest and enthusiasm in British heritage for the enxt generation.</b>
                 </div>
                 <div class="project-info">
                     My name is Freddy. I am not a historian or a scholar, but I know how to engage a modern, younger audience like few historians are capable of.
