Add subscription button to index.html

--- a/index.html
+++ b/index.html
@@ -228,6 +228,11 @@
                     <img src="https://freddyor.github.io/british-map/videos/IMG_7251.jpeg" 
                         alt="Profile Photo" />
                 </div>
+                <a href="https://buy.stripe.com/3cI8wQ6IG2I71ZxbDubwk00" target="_blank" rel="noopener">
+  <button style="padding:12px 24px;background:#635bff;color:#fff;border:none;border-radius:8px;font-size:16px;font-family:sans-serif;cursor:pointer;">
+    Subscribe Monthly ❤️
+  </button>
+</a>
                 <div class="project-info">
                     <b>My mission is to inspire interest and enthusiasm in British heritage for the enxt generation.</b>
                 </div>
