--- a/index.html
+++ b/index.html
@@ -224,11 +224,12 @@
         </div>
         <div id="about-section" style="display:none;">
             <div id="about-section-content">
-                  <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 12px;">
+  <div style="display: flex; justify-content: center; gap: 18px; margin: 0; padding: 0; position: absolute; top: 0; left: 0; width: 100%;">
     <a href="privacy-policy.html" style="color: #888; font-size: 14px; text-decoration: none;">Privacy Policy</a>
-    <span style="color: #bbb;">|</span>
     <a href="terms-of-service.html" style="color: #888; font-size: 14px; text-decoration: none;">Terms of Service</a>
   </div>
+  <!-- Spacer for absolutely positioned links -->
+  <div style="height: 28px;"></div>
                 <div style="display: flex; flex-direction: column; align-items: center;">
                     <img src="https://freddyor.github.io/british-map/videos/IMG_7251.jpeg" 
                         alt="Profile Photo" />
