--- a/index.html
+++ b/index.html
@@ -222,36 +222,39 @@
         <div id="archive-section" style="display:none;">
             <!-- Archive content to come -->
         </div>
-        <div id="about-section" style="display:none;">
-            <div id="about-section-content">
-  <div style="display: flex; justify-content: center; gap: 18px; margin: 0; padding: 0; position: absolute; top: 0; left: 0; width: 100%;">
+<div id="about-section-content" style="position: relative;">
+  <!-- Policy Links Start -->
+  <div style="display: flex; justify-content: center; gap: 18px; margin-top: 16px; margin-bottom: 8px;">
     <a href="privacy-policy.html" style="color: #888; font-size: 14px; text-decoration: none;">Privacy Policy</a>
     <a href="terms-of-service.html" style="color: #888; font-size: 14px; text-decoration: none;">Terms of Service</a>
   </div>
-  <!-- Spacer for absolutely positioned links -->
-  <div style="height: 28px;"></div>
-                <div style="display: flex; flex-direction: column; align-items: center;">
-                    <img src="https://freddyor.github.io/british-map/videos/IMG_7251.jpeg" 
-                        alt="Profile Photo" />
-                </div>
+  <!-- Policy Links End -->
 
-                <div class="project-info">
-                    <b>My mission is to inspire interest and enthusiasm in British heritage for the enxt generation.</b>
-                </div>
-                <div class="project-info">
-                    My name is Freddy. I am not a historian or a scholar, but I know how to engage a modern, younger audience like few historians are capable of.
-                </div>
-                <div class="project-info">
+  <div style="display: flex; flex-direction: column; align-items: center;">
+    <img src="https://freddyor.github.io/british-map/videos/IMG_7251.jpeg" alt="Profile Photo" style="margin-top: 0; margin-bottom: 10px;" />
+  </div>
+  <a href="https://buy.stripe.com/3cI8wQ6IG2I71ZxbDubwk00" target="_blank" rel="noopener">
+    <button style="padding:12px 24px;background:#635bff;color:#fff;border:none;border-radius:8px;font-size:16px;font-family:sans-serif;cursor:pointer;">
+      Subscribe Monthly ❤️
+    </button>
+  </a>
+  <div class="project-info" style="margin-top: 10px;">
+    <b>My mission is to inspire interest and enthusiasm in British heritage for the next generation.</b>
+  </div>
+  <div class="project-info" style="margin-top: 8px;">
+    My name is Freddy. I am not a historian or a scholar, but I know how to engage a modern, younger audience like few historians are capable of.
+  </div>
+  <div class="project-info" style="margin-top: 8px;">
     The site aims to solve two of your problems:
-    <ul class="custom-bullets" style="list-style-type: disc; text-align: left;">
-        <li>allow you to to see the hidden and unknown (<span style="color: #ffd600; font-weight: bold;">yellow</span> markers)</li>
-        <li>allow you to discover the story behind any building that you are looking at (white markers)</li>
+    <ul class="custom-bullets" style="list-style-type: disc; text-align: left; margin-top: 5px;">
+      <li>allow you to see the hidden and unknown (<span style="color: #ffd600; font-weight: bold;">yellow</span> markers)</li>
+      <li>allow you to discover the story behind any building that you are looking at (white markers)</li>
     </ul>
+  </div>
+  <div class="project-info" style="margin-top: 8px;">
+    Email me: freddy@britmap.com 📧
+  </div>
 </div>
-                                                <div class="project-info">
-                    Email me: freddy@britmap.com 📧
-                </div>
-            </div>
         </div>
     </div>
 
