Enhance support section with donation options
Added donation and support information to the site.

--- a/index.html
+++ b/index.html
@@ -234,10 +234,27 @@
                 <div style="display: flex; flex-direction: column; align-items: center;">
                     <img src="https://freddyor.github.io/british-map/videos/IMG_7251.jpeg" 
                         alt="Profile Photo" style="margin-top: 0; margin-bottom: 10px;" />
+                     <div class="project-info" style="margin-top: 10px;">
+                    <b>Please help me keep the site ad free.</b>
                 </div>
-                <a href="https://buy.stripe.com/3cI8wQ6IG2I71ZxbDubwk00" target="_blank" rel="noopener">
+                <div class="project-info" style="margin-top: 8px;">
+                    Due to the complexity of the project, the front-end and back-end severs are obviously not free. Every time you use the site, it costs me.
+                </div>
+                                    <div class="project-info" style="margin-top: 8px;">
+                    I would rather not plaster the site with ads, so generous donors are needed.
+                </div>
+                                    <div class="project-info" style="margin-top: 8px;">
+                    If you used my site, please pay forward for the next person.
+                </div>
+                </div>
+                                <a href="https://buy.stripe.com/3cI8wQ6IG2I71ZxbDubwk00" target="_blank" rel="noopener">
   <button style="padding:12px 24px;background:#635bff;color:#fff;border:none;border-radius:8px;font-size:16px;font-family:sans-serif;cursor:pointer;">
-    Subscribe Monthly ❤️
+    Support me £5 monthly
+  </button>
+</a>
+                <a href="https://donate.stripe.com/bJe3cw2sqbeDeMjePGbwk01" target="_blank" rel="noopener">
+  <button style="padding:12px 24px;background:#635bff;color:#fff;border:none;border-radius:8px;font-size:16px;font-family:sans-serif;cursor:pointer;">
+    One-time donation 
   </button>
 </a>
                 <div class="project-info" style="margin-top: 10px;">
