--- a/index.html
+++ b/index.html
@@ -228,6 +228,9 @@
             display: inline-block;
             /* Overwrites old inline style */
         }
+        .donation-button + .donation-button {
+    margin-top: 15px !important;   /* Reduce gap between buttons */
+}
     </style>
 </head>
 <body>
