--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#192b4a" media="(prefers-color-scheme: dark)">
     <title>YorkMapped</title>
 
-    <link rel="icon" href="https://freddyor.github.io/british-map/videos/favcon.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="https://freddyor.github.io/british-map/videos/favcon.jpg" type="image/jpg" sizes="32x32">
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.0.0/mapbox-gl.css" rel="stylesheet" />
 
     <style>
@@ -235,7 +235,7 @@
 </head>
 <body>
     <div id="loading-screen">
-        <img src="https://freddyor.github.io/british-map/videos/favcon.png" alt="Loading icon" id="loading-icon">
+        <img src="https://freddyor.github.io/british-map/videos/favcon.jpg" alt="Loading icon" id="loading-icon">
         <div class="spinner"></div>
     </div>
     <div id="main-content">
@@ -255,7 +255,7 @@
                 <!-- Policy Links End -->
 
                 <div style="display: flex; flex-direction: column; align-items: center;">
-                    <img src="https://freddyor.github.io/british-map/videos/IMG_7251.jpeg" 
+                    <img src="https://freddyor.github.io/british-map/videos/favcon.jpg" 
                         alt="Profile Photo" style="margin-top: 0; margin-bottom: 10px;" />
                      <div class="project-info" style="margin-top: 10px;">
                     <b>Please help me keep the site ad free.</b>
