--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             width: 50px;
             height: 50px;
             margin-bottom: 20px;
+            border-radius: 16px; /* Added for rounded edges */
         }
 
         .spinner {
