--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                     <b>My mission is to inspire interest and enthusiasm in British heritage for the next generation.</b>
                 </div>
                 <div class="project-info" style="margin-top: 8px;">
-                    My name is Freddy. I am not a historian or a scholar, but I know how to engage a modern, younger audience like few historians are capable of.
+                    My name is Fred. I am not a historian or a scholar, but I know how to engage a modern, younger audience like few historians are capable of.
                 </div>
                 <div class="project-info" style="margin-top: 8px;">
     The site aims to solve two of your problems:
